# riptide_plugin

./: README.md
riptide_controller/: CMakeLists.txt  package.xml
riptide_controller/data/: Essai.json  essai2.json
riptide_controller/launch/: controller_heading.launch  controller_heading_without_drivers.launch  controller_waypoint.launch  controller_waypoint_without_drivers.launch  readMe
riptide_controller/src/: AUV.py  Controller_heading.py  Controller_waypoint.py  Drivers.py  Observer.py  mission.py  modele_terrain_v2.py  riptide.py  roblib.py
riptide_description/: CMakeLists.txt  README.md  package.xml
riptide_description/launch/: launch_heading.launch  launch_waypoint.launch  upload.launch
riptide_description/meshes/: body.dae  body.stl  fin.dae
riptide_description/robots/: default.xacro
riptide_description/src/: remap.py
riptide_description/test/: test_urdf_files.py  test_urdf_files.test
riptide_description/urdf/: actuators.xacro  base.xacro  gazebo.xacro  sensors.xacro  snippets.xacro
